--- a/logIn.html
+++ b/logIn.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>git basics</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>header</h1>
-    <p>new changes made to the repo</p>
-    <p>testing the checkout function</p>
+    <h1>Sign up</h1>
+    <p>Please enter your credentials</p>
 </body>
 </html>
